--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     image: postgres:15-alpine
     environment:
       POSTGRES_DB: requisition_db
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: ${DB_USER:-admin}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -12,7 +12,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U admin -d requisition_db" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER:-admin} -d requisition_db" ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -32,9 +32,12 @@ services:
   backend:
     build: ./backend
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/requisition_db
+      # Pass .env variables to application.yml
+      DB_URL: ${DB_URL:-jdbc:postgresql://postgres:5432/requisition_db}
+      DB_USER: ${DB_USER:-admin}
+      DB_PASSWORD: ${DB_PASSWORD:-password}
       SPRING_REDIS_HOST: redis
-      JWT_SECRET: dev_secret_key_change_in_prod_1234567890
+      JWT_SECRET: ${JWT_SECRET:-dev_secret_key_change_in_prod_1234567890}
     ports:
       - "8081:8080"
     healthcheck:
