--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,10 @@
 server {
     listen 80;
+    server_name localhost;
     
+    # Increase upload size limit to 50MB
+    client_max_body_size 50M;
+
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
