--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,18 +16,19 @@
     "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.20",
     "@mui/material": "^5.14.20",
+    "@mui/x-date-pickers": "^6.18.4",
     "@reduxjs/toolkit": "^2.0.1",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.6.2",
+    "browser-image-compression": "^2.0.2",
+    "date-fns": "^2.30.0",
     "idb": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
-    "zod": "^3.22.4",
-    "@mui/x-date-pickers": "^6.18.4",
-    "date-fns": "^2.30.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
