--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,9 @@ services:
       SPRING_REDIS_HOST: redis
       JWT_SECRET: ${JWT_SECRET:-dev_secret_key_change_in_prod_1234567890}
     ports:
-      - "8081:8080"
+      - "8081:8081"
     healthcheck:
-      test: wget --no-verbose --tries=1 --spider http://localhost:8080/api/v1/health || exit 1
+      test: [ "CMD", "curl", "-f", "http://localhost:8081/api/v1/health" ]
       interval: 10s
       timeout: 5s
       retries: 5
